fixed padding, tried to do some alignment.

--- a/design/styles.css
+++ b/design/styles.css
@@ -34,14 +34,14 @@ body {
 }
 
 .content {
+  display: flex;
   max-width: 960px;
   margin-right: 15px;
   flex: 0 1 auto;
 }
 
 .left-side {
-  display: flex;
-  margin-right: 15px;
+  flex-direction: column;
   flex-wrap: wrap;
 }
 
@@ -54,14 +54,13 @@ body {
 
 .caption {
   background-color: #A4D7DB;
-  margin-right: 15px;
-  padding: 5px;
+  padding: 15px;
 }
 
 .right-side{
   background-color: #A4D7DB;
-  margin: 2%;
-  padding: 5px;
+  align-self: flex-end;
+  padding: 15px;
 }
 
 .sublist1, .sublist2, .sublist3 {
